[tool.poetry]
name = "product-research-document"
version = "0.1.0"
description = ""
authors = ["samzong <samzong.lu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
anyio = "3.5.0"
asgiref = "3.5.0"
Babel = "2.10.1"
beautifulsoup4 = "4.10.0"
certifi = "2021.10.8"
cffi = "1.15.0"
charset-normalizer = "2.0.12"
cli-helpers = "2.2.1"
click = "8.0.4"
configobj = "5.0.6"
cryptography = "36.0.1"
csscompressor = "0.9.5"
EditorConfig = "0.12.3"
et-xmlfile = "1.1.0"
fastapi = "0.74.1"
ghp-import = "2.0.2"
gitdb = "4.0.9"
GitPython = "3.1.27"
h11 = "0.13.0"
htmlmin = "0.1.12"
idna = "3.3"
importlib-metadata = "4.11.1"
importlib-resources = "5.7.1"
Jinja2 = "3.0.3"
jsbeautifier = "1.14.0"
jsmin = "3.0.1"
jwt = "1.3.1"
Markdown = "3.3.6"
MarkupSafe = "2.1.0"
mergedeep = "1.3.4"
mkdocs = "1.3.0"
mkdocs-git-revision-date-localized-plugin = "1.0.1"
mkdocs-git-revision-date-plugin = "0.3.2"
mkdocs-material = "8.2.11"
mkdocs-material-extensions = "1.0.3"
mkdocs-mermaid2-plugin = "0.6.0"
mkdocs-minify-plugin = "0.5.0"
mkdocs-redirects = "1.0.4"
mkdocs-rss-plugin = "1.0.0"
mycli = "1.25.0"
openpyxl = "3.0.9"
packaging = "21.3"
prompt-toolkit = "3.0.29"
pyaes = "1.6.1"
pycparser = "2.21"
pydantic = "1.9.0"
Pygments = "2.11.2"
pymdown-extensions = "9.2"
PyMySQL = "1.0.2"
pyparsing = "3.0.7"
pyperclip = "1.8.2"
python-dateutil = "2.8.2"
pytz = "2022.1"
PyYAML = "6.0"
pyyaml_env_tag = "0.1"
requests = "2.27.1"
six = "1.16.0"
smmap = "5.0.0"
sniffio = "1.2.0"
soupsieve = "2.3.1"
sqlparse = "0.4.2"
starlette = "0.17.1"
tabulate = "0.8.9"
typing-extensions = "4.1.1"
urllib3 = "1.26.8"
uvicorn = "0.17.5"
watchdog = "2.1.6"
wcwidth = "0.2.5"
zipp = "3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
